--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,23 @@
+name = "Disorderness"
+uuid = "a018e150-fc35-4221-8bf5-e7126c2bb568"
+authors = ["T. -H. Wu"]
+version = "0.1.0"
+
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+GeneralTools = "e6213164-e472-4082-9e51-db24b57ca6ab"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
